worked with office hours and got help, fixed some bugs with heights and spacing

--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,6 @@
+/* Fonts import section */ 
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Permanent+Marker&family=Rock+Salt&display=swap');
+
 /* Add CSS styling here */
 
 /* CSS Reset */
@@ -24,13 +27,13 @@ vertical-align: baseline;
 /*border: 1px solid green; */ 
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Permanent+Marker&family=Rock+Salt&display=swap');
 
 /* general info for everything */
 * {
     box-sizing: border-box;
     max-width: 100%;
     font-size: 62.5%; /* make sure that font sizes are accessable to everyone */
+    
     
 }
 
@@ -78,7 +81,7 @@ nav {
 /* in the index.html - this is the about me section blurb */
 #bannerwords {
     text-align: center;
-    padding: % 15% 0% 15%;
+    padding: 0% 15% 0% 15%;
    
 }
 
@@ -105,7 +108,6 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 600px;
     padding: 3%;
     text-align: center;
     font-size: 1.5rem;
@@ -119,7 +121,7 @@ nav {
 
 #description {
     text-align: center;
-    padding: 0 10%;
+    padding: 0 10% 5%;
     
 }
 
@@ -149,7 +151,6 @@ nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 300px;
     padding: 2vh 7vw;
     font-size: 1.5rem;
     line-height: 2;
@@ -189,7 +190,7 @@ p {
     font-size: 1.5rem;
 }
 
-/*footer {
+footer {
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -199,17 +200,23 @@ p {
     padding: 0%;
     font-family: 'Rock Salt', cursive;
     background-color: #70FFE3;
+    font-size: 1rem;
 }
 
-#footer {
-    font-size: 0.5rem;
-} */
 
 
 /* start of media queries */
 
 /* media query for 800px */
 @media (max-width: 800px) {
+    #bannerwords {
+        padding: 0 5%;
+    }
+
+    #bannerwords h2 {
+        padding: 0px;
+    }
+    
     #projects {
         flex-direction: row;
         flex-wrap: wrap;
@@ -226,6 +233,11 @@ p {
 
     #about2 ul {
         padding: 4% 4%;
+    }
+
+    footer {
+        margin: 0 auto;
+        padding: 0;
     }
 }
 
